remove not needed folders, images stored in top level dir